исправить ошибки валидации

--- a/blocks/popup/__text-submit/popup__text-submit.css
+++ b/blocks/popup/__text-submit/popup__text-submit.css
@@ -1,6 +1,5 @@
-
 .popup__text-submit{
-  font-family: "Inter", Arial, Helvetica, sans-serif;;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
