--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
   max-width: 880px;
   min-height: 74px;
   margin: 45px 200px 0 200px;
-  border-bottom: 1px solid #545454;;
+  border-bottom: 1px solid #545454;
 }
 
 @media screen and (max-width: 1279px) {
