--- a/blocks/user/user.css
+++ b/blocks/user/user.css
@@ -12,6 +12,6 @@
     min-height: fit-content;
     padding: 42px 19px 0 19px;
     flex-direction: column;
-    align-items: center
+    align-items: center;
   }
 }
