исправить пометки ревьюера

--- a/blocks/user-gallery/__like-b/user-gallery__like-b.css
+++ b/blocks/user-gallery/__like-b/user-gallery__like-b.css
@@ -1,15 +1,19 @@
 .user-gallery__like-b{
   max-width: 22px;
   min-height: 19px;
+  background-color: transparent;
+  padding: 0;
   background-image: url(../../../images/like_b_dis.svg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: contain;
+  cursor: pointer;
+  opacity: 1;
   border: 0;
   margin: 0;
 }
 
 .user-gallery__like-b:hover{
-  background-image: url(../../../images/like_b_hover.svg);
+  opacity: 0.5;
 
 }
