--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,9 +2,8 @@
   display: flex;
   align-items: flex-start;
   max-width: 880px;
-  min-height: 74px;
   margin: 45px 200px 0 200px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
 }
 
 @media screen and (max-width: 1279px) {
