--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -17,3 +17,19 @@
   opacity: 0.6;
 
 }
+
+
+@media screen and (max-width: 1279px) {
+  .popup__close{
+    background-size: 22px 22px;
+    width: 22px;
+    height: 22px;
+    border: none;
+    position: absolute;
+    top: -35px;
+    right: 0;
+    cursor: pointer;
+    opacity: 1;
+  }
+
+}
