--- a/blocks/user-gallery/__photo-name/user-gallery__photo-name.css
+++ b/blocks/user-gallery/__photo-name/user-gallery__photo-name.css
@@ -4,5 +4,11 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  font-size: 24px;
+  line-height: 29px;
   font-weight: 900;
+  margin-block-start: 0;
+  margin-block-end: 0;
+
+
 }
