--- a/blocks/user/__add-info/user__add-info.css
+++ b/blocks/user/__add-info/user__add-info.css
@@ -2,11 +2,12 @@
   width: 24px;
   height: 24px;
   border: 1px solid #FFFFFF;
-  background-color:rgba(0, 0, 0, 0.8);
-  background-image: url(../../../images/Vector1.png);
+  background-color: transparent;
+  background-image: url(../../../images/edit_name-b.svg);
   background-repeat: no-repeat;
   background-position: center;
   align-self: center;
+  cursor: pointer;
   opacity: 1;
 }
 
