--- a/blocks/user/__add-photo/user__add-photo.css
+++ b/blocks/user/__add-photo/user__add-photo.css
@@ -2,11 +2,13 @@
   width: 150px;
   height: 50px;
   border: 2px solid #FFFFFF;
-  background-color: #000;
+  background-color: transparent;
   background-image: url(../../../images/addph.svg);
   background-repeat: no-repeat;
   background-position: center;
   align-self: center;
+  cursor: pointer;
+  border-radius: 2px;
   opacity: 1;
 }
 
