--- a/blocks/user/__image/user__image.css
+++ b/blocks/user/__image/user__image.css
@@ -1,4 +1,20 @@
 
 .user__image{
+  object-fit: scale-down;
+  object-position: center;
   border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  margin-right: 50px;
+
+}
+
+@media screen and (max-width: 1279px) {
+  .user__image{
+    display: flex;
+    justify-content: center;
+    margin-right: 0;
+  }
+}
+
 }
