--- a/blocks/user/__info/user__info.css
+++ b/blocks/user/__info/user__info.css
@@ -15,10 +15,10 @@
 @media screen and (max-width: 1279px) {
   .user__info{
     margin-top: 14px;
-    max-width: 282px;
+    max-width: 189px;
     font-size: 14px;
     line-height: 17px;
-
+    grid-column: 1/3;
     text-align: center;
   }
 }
