--- a/blocks/user-gallery/__items/user-gallery__items.css
+++ b/blocks/user-gallery/__items/user-gallery__items.css
@@ -1,4 +1,5 @@
 .user-gallery__items{
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(3, 282px);
   grid-template-rows: repeat(2, 1fr);
