--- a/blocks/user-gallery/user-gallery.css
+++ b/blocks/user-gallery/user-gallery.css
@@ -1,8 +1,9 @@
 .user-gallery{
+  box-sizing: border-box;
   max-width: 880px;
   min-height: fit-content;
-  margin: 0;
-  padding: 76px 200px 0 200px;
+  margin: 0 auto;
+  padding: 76px 0 0 0;
 }
 
 @media screen and (max-width: 1279px) {
