--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
   align-items: flex-start;
   max-width: 880px;
   margin: 45px 200px 0 200px;
-  border-bottom: 1px solid rgba(rgba(84, 84, 84, 0.7););
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 1279px) {
