--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,21 @@
 
 .popup{
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: rgb(0, 0, 0, .5);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+
+  padding: 0;
+  margin: 0;
+
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 1s, opacity 1s linear;
+
 }
