--- a/pages/index.css
+++ b/pages/index.css
@@ -12,15 +12,20 @@
 @import url(../blocks/user/__info/user__info.css);
 @import url(../blocks/user/__add-photo/user__add-photo.css);
 @import url(../blocks/user-gallery/user-gallery.css);
+@import url(../blocks/user-gallery/__delete-button/user-gallery__delete-button.css);
 @import url(../blocks/user-gallery/__items/user-gallery__items.css);
 @import url(../blocks/user-gallery/__item/user-gallery__item.css);
 @import url(../blocks/user-gallery/__caption/user-gallery__caption.css);
 @import url(../blocks/user-gallery/__photo/user-gallery__photo.css);
 @import url(../blocks/user-gallery/__photo-name/user-gallery__photo-name.css);
 @import url(../blocks/user-gallery/__like-b/user-gallery__like-b.css);
+@import url(../blocks/user-gallery/__like-b/_active/user-gallery__like-b_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__project-name/footer__project-name.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container-photo/popup__container-photo.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__info/popup__info.css);
