--- a/pages/index.css
+++ b/pages/index.css
@@ -30,9 +30,13 @@
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__info/popup__info.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(../blocks/popup/__button-submit/popup__button-submit.css);
+@import url(../blocks/popup/__button-submit/_invalid/popup__button-submit_invalid.css);
 @import url(../blocks/popup/__text-submit/popup__text-submit.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/_is-open/popup_is-open.css);
 
 
