--- a/blocks/user-gallery/user-gallery.css
+++ b/blocks/user-gallery/user-gallery.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 1279px) {
   .user-gallery{
-    max-width: 282px;
+    min-width: 282px;
     padding: 36px 19px 0 19px;
     }
 }
