--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,7 +1,7 @@
 .popup__image{
   max-width: 100%;
   height: calc(100% - 15px);
-  object-fit: cover;
+  object-fit: fill;
   padding: 0;
   margin: 0;
 }
