--- a/blocks/popup/__container-photo/popup__container-photo.css
+++ b/blocks/popup/__container-photo/popup__container-photo.css
@@ -1,6 +1,6 @@
 .popup__container-photo{
   max-width: 75vw;
-  height: 75vh;
+  max-height: 75vh;
   position: relative;
   padding: 0;
   margin: 0;
