--- a/src/blocks/user-gallery/__delete-button/user-gallery__delete-button.css
+++ b/src/blocks/user-gallery/__delete-button/user-gallery__delete-button.css
@@ -8,10 +8,11 @@
   width: 20px;
   height: 20px;
   background-image: url(../../../images/Trash.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
   display: block;
   position: absolute;
   right: 15px;
   top: 15px;
-
-
 }
