--- a/src/blocks/user/__image/user__image.css
+++ b/src/blocks/user/__image/user__image.css
@@ -1,11 +1,28 @@
 
 .user__image{
-  object-fit: scale-down;
+  object-fit: cover;
+  object-position: center center;
+
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+
+  border-radius: inherit;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.user__image:hover {
+  cursor: pointer;
+  opacity: 0.2;
+
+
+  /* position: inherit;
+  object-fit: fill;
   object-position: center;
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  margin-right: 50px;
 
 }
 
@@ -14,5 +31,5 @@
     display: flex;
     justify-content: center;
     margin-right: 0;
-  }
+  } */
 }
